Use general defaults for example.luigi.cfg

--- a/example.luigi.cfg
+++ b/example.luigi.cfg
@@ -4,6 +4,7 @@ mem=512
 
 [rnaseq_variant_pipeline]
 star_bin=contrib/STAR/bin/Linux_x86_64/STAR
-gatk_bin=contrib/gatk-4.1.4.0/gatk
+gatk_bin=contrib/gatk/gatk
 
-output_dir=/cosmos/data/pipeline-output/rnaseq-variant-pipeline
+output_dir=pipeline-output
+tmp_dir=/tmp
