--- a/example.luigi.cfg
+++ b/example.luigi.cfg
@@ -1,10 +1,14 @@
 [resources]
-cpu=64
-mem=512
+cpu=8
+mem=16
 
 [rnaseq_variant_pipeline]
 star_bin=contrib/STAR/bin/Linux_x86_64/STAR
 gatk_bin=contrib/gatk/gatk
+
+genome=genomes/hg19_ensembl98/Homo_sapiens.GRCh37.dna.primary_assembly.fa
+annotations=genomes/hg19_ensembl98/Homo_sapiens.GRCh37.87.gtf
+star_index_dir=references/hg19_ensembl98
 
 output_dir=pipeline-output
 tmp_dir=/tmp
